[package]
name = "move-script-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.0.29"
features = ["derive"]

[dependencies.aptos-sdk]
git = "https://github.com/aptos-labs/aptos-core"
branch = "main"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.14"
features = ["json"]

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[dependencies]
hex = "0.4.3"